Creacion de carta con java

--- a/src/index.html
+++ b/src/index.html
@@ -12,18 +12,30 @@
     />
     <link rel="shortcut icon" href="./4geeks.ico" />
   </head>
+
   <body>
+    <header>
+      <input type="text" />
+      <button>Cartas</button>
+      <button>Ordenar</button>
+    </header>
     <div class="contenedorTotal">
+      <!-- Carta -->
+      <div id="contenedorAdd" class="contenedor">
+        <!-- Dentro del contenedor creas cartas y las agregas aqui -->
+       
+        </div>
+      </div>
+    </div>
+
+    <!-- Div de abajo con cartas ordenadas -->
+    <div class="resultadoOrdenado" id="OrdenadoDiv">
+      <h2>Cartas ordenadas:</h2>
       <div class="contenedor">
-        <div class="icono1">
-          <p id="iconoNum1"></p>
-        </div>
-        <div class="num">
-          <p id="numero"></p>
-        </div>
-        <div class="icono2">
-          <p id="iconoNum2"></p>
-        </div>
+        <!-- Dentro del contenedor tenes que crear la cantidad de cartas y agregarlas -->
+        <!-- <div class="carta">
+
+          </div> -->
       </div>
     </div>
   </body>
