--- a/src/index.html
+++ b/src/index.html
@@ -15,8 +15,8 @@
 
   <body>
     <header>
-      <input type="text" />
-      <button>Cartas</button>
+      <input id="cantidadDeCartasInput" type="text" />
+      <button id="generar">Cartas</button>
       <button>Ordenar</button>
     </header>
     <div class="contenedorTotal">
