Generamos todas las cartas con sus colores

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
     <header>
       <input id="cantidadDeCartasInput" type="text" />
       <button id="generar">Cartas</button>
-      <button>Ordenar</button>
+      <button id="ordenarCartas">Ordenar</button>
     </header>
     <div class="contenedorTotal">
       <!-- Carta -->
