--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
     <!-- Div de abajo con cartas ordenadas -->
     <div class="resultadoOrdenado" id="OrdenadoDiv">
       <h2>Cartas ordenadas:</h2>
-      <div class="contenedor">
+      <div id="CartasOrdenadas"class="contenedor">
         <!-- Dentro del contenedor tenes que crear la cantidad de cartas y agregarlas -->
         <!-- <div class="carta">
 
