--- a/src/index.html
+++ b/src/index.html
@@ -14,11 +14,13 @@
   </head>
 
   <body>
-    <header>
+    <div class="topper">
+        <header>
       <input id="cantidadDeCartasInput" type="text" />
       <button id="generar">Cartas</button>
       <button id="ordenarCartas">Ordenar</button>
     </header>
+    </div>
     <div class="contenedorTotal">
       <!-- Carta -->
       <div id="contenedorAdd" class="contenedor">
