--- a/src/index.html
+++ b/src/index.html
@@ -1,44 +1,46 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hello Rigo with Vanilla.js</title>
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
-      integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
-      crossorigin="anonymous"
-    />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
+        integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous" />
     <link rel="shortcut icon" href="./4geeks.ico" />
-  </head>
+</head>
 
-  <body>
+<body>
     <div class="topper">
         <header>
-      <input id="cantidadDeCartasInput" type="text" />
-      <button id="generar">Cartas</button>
-      <button id="ordenarCartas">Ordenar</button>
-    </header>
+            <input id="cantidadDeCartasInput" type="text" />
+            <button id="generar">Cartas</button>
+            <button id="ordenarCartas">Ordenar</button>
+            <select id="ordenadorSeleID" class="ordenadorS" name="ordenadorS">
+                <option value="">Select…</option>
+                <option value="Ordenar">Ordenar</option>
+            </select>
+        </header>
     </div>
     <div class="contenedorTotal">
-      <!-- Carta -->
-      <div id="contenedorAdd" class="contenedor">
-        <!-- Dentro del contenedor creas cartas y las agregas aqui -->
-       
+        <!-- Carta -->
+        <div id="contenedorAdd" class="contenedor">
+            <!-- Dentro del contenedor creas cartas y las agregas aqui -->
+
         </div>
-      </div>
+    </div>
     </div>
 
     <!-- Div de abajo con cartas ordenadas -->
     <div class="resultadoOrdenado" id="OrdenadoDiv">
-      <h2>Cartas ordenadas:</h2>
-      <div id="CartasOrdenadas"class="contenedor">
-        <!-- Dentro del contenedor tenes que crear la cantidad de cartas y agregarlas -->
-        <!-- <div class="carta">
+        <h2>Cartas ordenadas:</h2>
+        <div id="CartasOrdenadas" class="contenedor">
+            <!-- Dentro del contenedor tenes que crear la cantidad de cartas y agregarlas -->
+            <!-- <div class="carta">
 
           </div> -->
-      </div>
+        </div>
     </div>
-  </body>
+</body>
+
 </html>
